@@ -1,18 +1,19 @@
 package datawave.ingest.data;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Arrays;
-
-import datawave.ingest.data.config.DataTypeHelper;
-import datawave.ingest.data.config.ingest.IngestHelperInterface;
-
 import java.util.HashMap;
 import java.util.Map;
+
 import org.apache.commons.lang.builder.CompareToBuilder;
 import org.apache.commons.lang.builder.EqualsBuilder;
 import org.apache.commons.lang.builder.HashCodeBuilder;
 import org.apache.commons.lang.builder.ToStringBuilder;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.mapreduce.RecordReader;
+
+import datawave.ingest.data.config.DataTypeHelper;
+import datawave.ingest.data.config.ingest.IngestHelperInterface;
 
 public class Type implements Comparable<Type> {
     // This is the name of the type which is used to match types, pull appropriate configuration, determine data handlers
@@ -22,14 +23,14 @@ public class Type implements Comparable<Type> {
     private String[] defaultDataTypeHandlers;
     private String[] defaultDataTypeFilters;
     private int filterPriority;
-    
+
     private static final Map<Type,IngestHelperInterface> helpers = new HashMap<>();
-    
+
     public Type(String name, Class<? extends IngestHelperInterface> helperClass, Class<? extends RecordReader<?,?>> readerClass,
                     String[] defaultDataTypeHandlers, int filterPriority, String[] defaultDataTypeFilters) {
         this(name, name, helperClass, readerClass, defaultDataTypeHandlers, filterPriority, defaultDataTypeFilters);
     }
-    
+
     public Type(String name, String outputName, Class<? extends IngestHelperInterface> helperClass, Class<? extends RecordReader<?,?>> readerClass,
                     String[] defaultDataTypeHandlers, int filterPriority, String[] defaultDataTypeFilters) {
         this.name = name;
@@ -40,46 +41,46 @@ public class Type implements Comparable<Type> {
         this.defaultDataTypeFilters = defaultDataTypeFilters;
         this.filterPriority = filterPriority;
     }
-    
+
     /**
      * This will return the name of the type
-     * 
+     *
      * @return the name of the type
      */
     public String typeName() {
         return this.name;
     }
-    
+
     /**
      * This will return the name to be used in accumulo Keys which is everything before the first '.' in the type name. For example a type of "mytype.csv" will
      * return "mytype" as its output name.
-     * 
+     *
      * @return The name to be used in the accumulo Keys
      */
     public String outputName() {
         return this.outputName;
     }
-    
+
     public String[] getDefaultDataTypeHandlers() {
         return defaultDataTypeHandlers;
     }
-    
+
     public String[] getDefaultDataTypeFilters() {
         return defaultDataTypeFilters;
     }
-    
+
     public int getFilterPriority() {
         return filterPriority;
     }
-    
+
     public Class<? extends IngestHelperInterface> getHelperClass() {
         return helperClass;
     }
-    
+
     public Class<? extends RecordReader<?,?>> getReaderClass() {
         return readerClass;
     }
-    
+
     public IngestHelperInterface getIngestHelper(Configuration conf) {
         if (!helpers.containsKey(this) && helperClass != null) {
             synchronized (helpers) {
@@ -90,15 +91,18 @@ public class Type implements Comparable<Type> {
         }
         return helpers.get(this);
     }
-    
+
     public void clearIngestHelper() {
         synchronized (helpers) {
             helpers.remove(this);
         }
     }
-    
+
     /**
      * @deprecated
+     * @param conf
+     *            - configuration to set
+     * @return helper interface
      */
     public IngestHelperInterface newIngestHelper(Configuration conf) {
         IngestHelperInterface helper = newIngestHelper();
@@ -109,22 +113,23 @@ public class Type implements Comparable<Type> {
         }
         return helper;
     }
-    
+
     /**
      * @deprecated
+     * @return helper interface
      */
     public IngestHelperInterface newIngestHelper() {
         IngestHelperInterface helper = null;
         if (helperClass != null) {
             try {
-                helper = helperClass.newInstance();
-            } catch (InstantiationException | IllegalAccessException e) {
+                helper = helperClass.getDeclaredConstructor().newInstance();
+            } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
                 // ignore for now
             }
         }
         return helper;
     }
-    
+
     public RecordReader<?,?> newRecordReader() {
         RecordReader<?,?> reader = null;
         if (readerClass != null) {
@@ -136,7 +141,7 @@ public class Type implements Comparable<Type> {
         }
         return reader;
     }
-    
+
     @Override
     public String toString() {
         StringBuilder builder = new StringBuilder();
@@ -148,7 +153,7 @@ public class Type implements Comparable<Type> {
         builder.append("</type>");
         return builder.toString();
     }
-    
+
     public String toDebugString() {
         ToStringBuilder tsb = new ToStringBuilder(this);
         tsb.append("name", this.name);
@@ -160,7 +165,7 @@ public class Type implements Comparable<Type> {
         tsb.append("filterPriority", this.filterPriority);
         return tsb.toString();
     }
-    
+
     @Override
     public boolean equals(Object o) {
         if (o == null)
@@ -173,20 +178,20 @@ public class Type implements Comparable<Type> {
         return new EqualsBuilder().append(name, other.name).append(this.outputName, other.outputName).append(this.helperClass, other.helperClass)
                         .append(this.readerClass, other.readerClass).append(this.defaultDataTypeHandlers, other.defaultDataTypeHandlers)
                         .append(this.defaultDataTypeFilters, other.defaultDataTypeFilters).append(this.filterPriority, other.filterPriority).isEquals();
-        
+
     }
-    
+
     @Override
     public int compareTo(Type o) {
         return new CompareToBuilder().append(name, o.name).append(outputName, o.outputName).append(getName(this.helperClass), getName(o.helperClass))
                         .append(getName(this.readerClass), getName(o.readerClass)).append(this.defaultDataTypeHandlers, o.defaultDataTypeHandlers)
                         .append(this.defaultDataTypeFilters, o.defaultDataTypeFilters).append(this.filterPriority, o.filterPriority).toComparison();
     }
-    
+
     private String getName(@SuppressWarnings("rawtypes") Class c) {
         return (c == null ? null : c.getName());
     }
-    
+
     @Override
     public int hashCode() {
         return new HashCodeBuilder().append(this.name).append(this.outputName).append(this.helperClass).append(this.readerClass)
