@@ -5,28 +5,34 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Map.Entry;
 
+import org.apache.hadoop.conf.Configuration;
+import org.apache.log4j.Logger;
+
 import com.google.common.collect.HashMultimap;
 import com.google.common.collect.Multimap;
+
 import datawave.data.normalizer.NormalizationException;
 import datawave.ingest.data.Type;
 import datawave.ingest.data.config.NormalizedContentInterface;
 import datawave.ingest.data.config.NormalizedFieldAndValue;
-import org.apache.hadoop.conf.Configuration;
-import org.apache.log4j.Logger;
 
 public abstract class AbstractNormalizer implements TextNormalizer {
     private static final Logger log = Logger.getLogger(AbstractNormalizer.class);
-    
+
     @Override
     public void setup(Type type, String instance, Configuration config) {}
-    
+
     /**
      * A factory method to create and configure a normalizer given a class name
      *
      * @param type
+     *            the type
      * @param instance
+     *            name of the instance
      * @param config
+     *            configuration to use
      * @param normalizerClass
+     *            the normalizerClass to set up
      * @return An configured instance of the normalizerClass
      */
     public static TextNormalizer createNormalizer(Type type, String instance, Configuration config, String normalizerClass) {
@@ -38,7 +44,7 @@ public abstract class AbstractNormalizer implements TextNormalizer {
         }
         Object o;
         try {
-            o = c.newInstance();
+            o = c.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             log.warn("Error creating Normalizer: {}", e);
             throw new IllegalArgumentException("Error creating instance of class " + normalizerClass + ':' + e.getLocalizedMessage(), e);
@@ -51,36 +57,46 @@ public abstract class AbstractNormalizer implements TextNormalizer {
         }
         return (TextNormalizer) o;
     }
-    
+
     /**
      * Convert a field value to its normalized form.
-     * 
+     *
      * @param fieldName
+     *            the field name
      * @param fieldValue
+     *            the field value
      * @return the normalized field value, or the original field value otherwise.
      * @throws NormalizationException
      *             if the value cannot be normalized
      */
     public abstract String convertFieldValue(String fieldName, String fieldValue) throws NormalizationException;
-    
+
     /**
      * Convert a field value regex to work against its normalized form.
-     * 
+     *
      * @param fieldName
+     *            the field name
      * @param fieldRegex
+     *            regex to check for a match
      * @return the normalized field value, or the original field value otherwise.
      * @throws NormalizationException
      *             if the value cannot be normalized
      */
     public abstract String convertFieldRegex(String fieldName, String fieldRegex) throws NormalizationException;
-    
+
     /**
      * A convenience routine to get a configuration value
      *
      * @param type
+     *            the type
      * @param instance
+     *            name of the instance
      * @param config
+     *            the configuration
      * @param key
+     *            the key to pull from
+     * @param defaultVal
+     *            default value to return
      * @return The value, null if not available
      */
     protected String get(Type type, String instance, Configuration config, String key, String defaultVal) {
@@ -92,14 +108,20 @@ public abstract class AbstractNormalizer implements TextNormalizer {
         }
         return defaultVal;
     }
-    
+
     /**
      * A convenience routine to get a configuration value
      *
      * @param type
+     *            the type
      * @param instance
+     *            name of the instance
      * @param config
+     *            the configuration to use
      * @param key
+     *            the key to pull from
+     * @param defaultVal
+     *            default boolean to return
      * @return The value, null if not available
      */
     protected boolean getBoolean(Type type, String instance, Configuration config, String key, boolean defaultVal) {
@@ -111,14 +133,20 @@ public abstract class AbstractNormalizer implements TextNormalizer {
         }
         return defaultVal;
     }
-    
+
     /**
      * A convenience routine to get a configuration value
      *
      * @param type
+     *            the name of the type
      * @param instance
+     *            the name of the instance
      * @param config
+     *            the configuration to use
      * @param key
+     *            the key to draw from
+     * @param defaultVal
+     *            default value to return
      * @return The value, null if not available
      */
     protected String[] getStrings(Type type, String instance, Configuration config, String key, String[] defaultVal) {
@@ -130,14 +158,16 @@ public abstract class AbstractNormalizer implements TextNormalizer {
         }
         return defaultVal;
     }
-    
+
     /**
      * Get the configuration key prefixes in precedence order: &lt;datatype&gt;.&lt;classname&gt;.&lt;instance&gt; &lt;datatype&gt;.&lt;classname&gt;
      * &lt;datatype&gt;.&lt;instance&gt; &lt;datatype&gt; all.&lt;classname&gt; all
      *
      * @param type
+     *            the name of the type
      * @param instance
-     * @return
+     *            the name of the instance
+     * @return a list of the configuration prefixes
      */
     protected String[] getConfPrefixes(Type type, String instance) {
         List<String> prefixes = new ArrayList<>();
@@ -146,7 +176,7 @@ public abstract class AbstractNormalizer implements TextNormalizer {
         prefixes.addAll(Arrays.asList(getConfPrefixes("all", null)));
         return prefixes.toArray(new String[prefixes.size()]);
     }
-    
+
     private String[] getConfPrefixes(String type, String instance) {
         StringBuilder builder = new StringBuilder();
         builder.append(type);
@@ -173,17 +203,17 @@ public abstract class AbstractNormalizer implements TextNormalizer {
             return new String[] {str2, str1};
         }
     }
-    
+
     @Override
     public String normalizeFieldValue(String field, String value) throws NormalizationException {
         return convertFieldValue(field, value);
     }
-    
+
     @Override
     public String normalizeFieldRegex(String field, String regex) throws NormalizationException {
         return convertFieldRegex(field, regex);
     }
-    
+
     @Override
     public NormalizedContentInterface normalize(NormalizedContentInterface field) {
         NormalizedFieldAndValue n = new NormalizedFieldAndValue(field);
@@ -199,7 +229,7 @@ public abstract class AbstractNormalizer implements TextNormalizer {
         }
         return n;
     }
-    
+
     @Override
     public Multimap<String,NormalizedContentInterface> normalize(Multimap<String,String> fields) {
         Multimap<String,NormalizedContentInterface> results = HashMultimap.create();
@@ -219,7 +249,7 @@ public abstract class AbstractNormalizer implements TextNormalizer {
         }
         return results;
     }
-    
+
     @Override
     public Multimap<String,NormalizedContentInterface> normalizeMap(Multimap<String,NormalizedContentInterface> fields) {
         Multimap<String,NormalizedContentInterface> results = HashMultimap.create();
@@ -238,23 +268,23 @@ public abstract class AbstractNormalizer implements TextNormalizer {
         }
         return results;
     }
-    
+
     @Override
     public int hashCode() {
         // Use the concrete TextNormalizer's full name to ensure that we don't get multiple
         // instances of the same class (as Object#hashCode is based on virtual memory location)
         return this.getClass().getName().hashCode();
     }
-    
+
     @Override
     public boolean equals(Object o) {
         if (o == null)
             return false;
         Class<?> otherClz = o.getClass();
-        
+
         // Since TextNormalizers are considered to be stateless,
         // we can treat equality as the same class
         return otherClz.equals(this.getClass());
-        
+
     }
 }
