@@ -1,8 +1,38 @@
 package datawave.ingest.mapreduce;
 
+import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.SortedMap;
+import java.util.Stack;
+import java.util.TreeMap;
+import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
+
+import org.apache.accumulo.core.data.Mutation;
+import org.apache.accumulo.core.data.Value;
+import org.apache.hadoop.conf.Configuration;
+import org.apache.hadoop.mapreduce.Counter;
+import org.apache.hadoop.mapreduce.CounterGroup;
+import org.apache.hadoop.mapreduce.Counters;
+import org.apache.hadoop.mapreduce.InputSplit;
+import org.apache.hadoop.mapreduce.lib.input.FileSplit;
+import org.apache.log4j.Logger;
+import org.apache.log4j.NDC;
+
 import com.google.common.collect.ArrayListMultimap;
 import com.google.common.collect.HashMultimap;
 import com.google.common.collect.Multimap;
+
+import datawave.data.normalizer.DateNormalizer;
 import datawave.ingest.data.RawRecordContainer;
 import datawave.ingest.data.Type;
 import datawave.ingest.data.TypeRegistry;
@@ -36,30 +66,6 @@ import datawave.ingest.validation.FieldValidator;
 import datawave.marking.MarkingFunctions;
 import datawave.util.StringUtils;
 import datawave.util.time.TraceStopwatch;
-import org.apache.accumulo.core.data.Mutation;
-import org.apache.accumulo.core.data.Value;
-import org.apache.hadoop.conf.Configuration;
-import org.apache.hadoop.mapreduce.Counter;
-import org.apache.hadoop.mapreduce.CounterGroup;
-import org.apache.hadoop.mapreduce.Counters;
-import org.apache.hadoop.mapreduce.InputSplit;
-import org.apache.hadoop.mapreduce.lib.input.FileSplit;
-import org.apache.log4j.Logger;
-import org.apache.log4j.NDC;
-
-import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.SortedMap;
-import java.util.Stack;
-import java.util.TreeMap;
-import java.util.concurrent.TimeUnit;
 
 /**
  *
@@ -85,53 +91,78 @@ import java.util.concurrent.TimeUnit;
  *            output value
  */
 public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDEnabledMapper<K1,V1,K2,V2> {
+
+    private static final String SRC_FILE_DEL = "|";
+
     private static final Logger log = Logger.getLogger(EventMapper.class);
-    
-    /**
-     * number which will be used to evaluate whether or not an Event should be processed. If the Event.getEventDate() is greater than (now - interval) then it
-     * will be processed.
-     */
-    public static final String DISCARD_INTERVAL = "event.discard.interval";
-    
+
+    // for backward compatibility, these DISCARD constants are maintained here as well
+    public static final String DISCARD_INTERVAL = DataTypeDiscardIntervalPredicate.DISCARD_INTERVAL;
+    public static final String DISCARD_FUTURE_INTERVAL = DataTypeDiscardFutureIntervalPredicate.DISCARD_FUTURE_INTERVAL;
+
+    public static final String RECORD_PREDICATES = "event.predicates";
+
     public static final String CONTEXT_WRITER_CLASS = "ingest.event.mapper.context.writer.class";
     public static final String CONTEXT_WRITER_OUTPUT_TABLE_COUNTERS = "ingest.event.mapper.context.writer.output.table.counters";
     public static final String FILE_NAME_COUNTERS = "ingest.event.mapper.file.name.counters";
-    
+
+    protected boolean createSequenceFileName = true;
+
+    protected boolean trimSequenceFileName = true;
+
+    protected boolean createRawFileName = true;
+
+    public static final String LOAD_DATE_FIELDNAME = "LOAD_DATE";
+
+    public static final String SEQUENCE_FILE_FIELDNAME = "ORIG_FILE";
+
+    public static final String LOAD_SEQUENCE_FILE_NAME = "ingest.event.mapper.load.seq.filename";
+
+    public static final String TRIM_SEQUENCE_FILE_NAME = "ingest.event.mapper.trim.sequence.filename";
+
+    public static final String RAW_FILE_FIELDNAME = "RAW_FILE";
+
+    public static final String LOAD_RAW_FILE_NAME = "ingest.event.mapper.load.raw.filename";
+
     public static final String ID_FILTER_FSTS = "ingest.event.mapper.id.filter.fsts";
-    
+
     protected Map<String,List<DataTypeHandler<K1>>> typeMap = new HashMap<>();
-    
-    /**
-     * might as well cache the discard interval
-     */
-    protected Map<String,Long> dataTypeDiscardIntervalCache = new HashMap<>();
-    
+
+    // Predicates are used to filter out events if needed. If predicates exist
+    // for a datatype, then the predicates need to all pass (return true)
+    // inorder to ingest the record. The event is otherwise dropped and a counter is
+    // incremented for the predicate class.
+    protected Map<String,Set<RawRecordPredicate>> predicateMap = new HashMap<>();
+
+    // base set of predicates
+    private Collection<String> predicates = Collections.emptyList();
+
     private FileSplit split = null;
-    
-    private long interval = 0l;
-    
+
     private static Now now = Now.getInstance();
-    
+
     private StandaloneStatusReporter reporter = new StandaloneStatusReporter();
-    
+
+    private DateNormalizer dateNormalizer = new DateNormalizer();
+
     private ContextWriter<K2,V2> contextWriter = null;
-    
+
     protected long offset = 0;
-    
+
     protected String splitStart = null;
-    
+
     Multimap<String,FieldValidator> validators;
-    
+
     protected Set<String> sequenceFileNames = new HashSet<>();
-    
+
     protected MarkingFunctions markingFunctions;
-    
+
     private boolean metricsEnabled = false;
     private MetricsService<K2,V2> metricsService;
     private ReusableMetricsLabels metricsLabels;
-    
+
     private FieldHarvester fieldHarvester;
-    
+
     /**
      * Set up the datatype handlers
      */
@@ -139,7 +170,7 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
     @Override
     public void setup(Context context) throws IOException, InterruptedException {
         super.setup(context);
-        
+
         InputSplit is = context.getInputSplit();
         if (is instanceof FileSplit)
             split = (FileSplit) is;
@@ -149,20 +180,31 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
             splitStart = Long.valueOf(split.getStart()).toString();
         } else
             splitStart = null;
-        
+
         // Needed for side-effects
         markingFunctions = MarkingFunctions.Factory.createMarkingFunctions();
-        
+
         // Initialize the Type Registry
         TypeRegistry.getInstance(context.getConfiguration());
-        
-        interval = context.getConfiguration().getLong(DISCARD_INTERVAL, 0l);
-        
+
         // FieldHarvester encapsulates the addition of virtual fields, composite fields, LOAD_DATE, etc.
         fieldHarvester = new FieldHarvester(context.getConfiguration());
-        
+
+        // load the predicates applied to all types
+        predicates = new HashSet<>(context.getConfiguration().getTrimmedStringCollection(RECORD_PREDICATES));
+        // always add the discard interval predicates
+        predicates.add(DataTypeDiscardIntervalPredicate.class.getName());
+        predicates.add(DataTypeDiscardFutureIntervalPredicate.class.getName());
+
+        // default to true, but it can be disabled
+        createSequenceFileName = context.getConfiguration().getBoolean(LOAD_SEQUENCE_FILE_NAME, true);
+
+        trimSequenceFileName = context.getConfiguration().getBoolean(TRIM_SEQUENCE_FILE_NAME, true);
+
+        createRawFileName = context.getConfiguration().getBoolean(LOAD_RAW_FILE_NAME, true);
+
         Class<? extends KeyValueFilter<K2,V2>> firstFilter = null;
-        
+
         // Use the filter class as the context writer if any
         ClassLoader classLoader = Thread.currentThread().getContextClassLoader();
         if (classLoader == null) {
@@ -171,7 +213,7 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
         Configuration filterConf = new Configuration(context.getConfiguration());
         Class<? extends KeyValueFilter<K2,V2>> lastFilter = null;
         for (String filterClassName : getDataTypeFilterClassNames()) {
-            
+
             Class<? extends KeyValueFilter<K2,V2>> filterClass = null;
             try {
                 filterClass = (Class<? extends KeyValueFilter<K2,V2>>) Class.forName(filterClassName, true, classLoader);
@@ -179,7 +221,7 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
                     firstFilter = filterClass;
                 }
                 if (lastFilter != null) {
-                    KeyValueFilter<K2,V2> filter = lastFilter.newInstance();
+                    KeyValueFilter<K2,V2> filter = lastFilter.getDeclaredConstructor().newInstance();
                     filter.configureChainedContextWriter(filterConf, filterClass);
                 }
                 lastFilter = filterClass;
@@ -187,9 +229,9 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
                 throw new IOException("Unable to configure " + filterClass + " on " + lastFilter, e);
             }
         }
-        
+
         Class<? extends ContextWriter<K2,V2>> contextWriterClass;
-        
+
         if (Mutation.class.equals(context.getMapOutputValueClass())) {
             contextWriterClass = (Class<ContextWriter<K2,V2>>) context.getConfiguration().getClass(CONTEXT_WRITER_CLASS, LiveContextWriter.class,
                             ContextWriter.class);
@@ -197,7 +239,7 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
             contextWriterClass = (Class<ContextWriter<K2,V2>>) context.getConfiguration().getClass(CONTEXT_WRITER_CLASS, BulkContextWriter.class,
                             ContextWriter.class);
         }
-        
+
         if (lastFilter != null) {
             try {
                 KeyValueFilter<K2,V2> filter = lastFilter.newInstance();
@@ -208,21 +250,21 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
             contextWriterClass = firstFilter;
         }
         try {
-            contextWriter = contextWriterClass.newInstance();
+            contextWriter = contextWriterClass.getDeclaredConstructor().newInstance();
             contextWriter.setup(filterConf, filterConf.getBoolean(CONTEXT_WRITER_OUTPUT_TABLE_COUNTERS, false));
         } catch (Exception e) {
             throw new IOException("Failed to initialized " + contextWriterClass + " from property " + CONTEXT_WRITER_CLASS, e);
         }
-        
+
         metricsEnabled = MetricsConfiguration.isEnabled(context.getConfiguration());
-        
+
         if (metricsEnabled) {
             try {
                 // important that MetricsService gets the unwrapped contextWriter
                 // we don't want metrics on our metrics
                 metricsService = new MetricsService<>(contextWriter, context);
                 metricsLabels = new ReusableMetricsLabels();
-                
+
                 contextWriter = new KeyValueCountingContextWriter<>(contextWriter, metricsService);
             } catch (Exception e) {
                 log.error("Could not configure metrics, disabling", e);
@@ -230,49 +272,49 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
                 metricsEnabled = false;
             }
         }
-        
+
         validators = ArrayListMultimap.create();
-        
+
         if (null != split) {
             if (filterConf.getBoolean(FILE_NAME_COUNTERS, true)) {
                 getCounter(context, IngestInput.FILE_NAME.name(), split.getPath().toString()).increment(1);
             }
         }
-        
+
         getCounter(context, IngestInput.LINE_BYTES.toString(), "MIN").setValue(Long.MAX_VALUE);
-        
+
         offset = 0;
-        
+
         if (log.isInfoEnabled()) {
             log.info("EventMapper configured. Bulk Ingest = true");
             log.info("EventMapper configured with the following filters: " + getDataTypeFilterClassNames());
         }
-        
+
     }
-    
+
     /**
-     * Get the data type handlers for a given type name. This will also fill the dataTypeDiscardIntervalCache and the validators as a side effect.
+     * Get the data type handlers for a given type name. This will also fill the predicate map and the validators as a side effect.
      *
+     * @param typeStr
+     *            name of the type
+     * @param context
+     *            the context
      * @return the data type handlers
      */
     private List<DataTypeHandler<K1>> loadDataTypeHandlers(String typeStr, Context context) {
         // Do not load the type twice
         if (!typeMap.containsKey(typeStr)) {
-            
+
             typeMap.put(typeStr, new ArrayList<>());
-            
-            long myInterval = context.getConfiguration().getLong(typeStr + "." + DISCARD_INTERVAL, interval);
-            
-            dataTypeDiscardIntervalCache.put(typeStr, myInterval);
-            
-            log.info("Setting up type: " + typeStr + " with interval " + myInterval);
-            
+
+            predicateMap.put(typeStr, getPredicates(typeStr, context, predicates));
+
             if (!TypeRegistry.getTypeNames().contains(typeStr)) {
                 log.warn("Attempted to load configuration for a type that does not exist in the registry: " + typeStr);
             } else {
                 Type t = TypeRegistry.getType(typeStr);
                 String fieldValidators = context.getConfiguration().get(typeStr + FieldValidator.FIELD_VALIDATOR_NAMES);
-                
+
                 if (fieldValidators != null) {
                     String[] validatorClasses = StringUtils.split(fieldValidators, ",");
                     for (String validatorClass : validatorClasses) {
@@ -288,16 +330,16 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
                         }
                     }
                 }
-                
+
                 String[] handlerClassNames = t.getDefaultDataTypeHandlers();
-                
+
                 if (handlerClassNames != null) {
                     for (String handlerClassName : handlerClassNames) {
                         log.info("Configuring handler: " + handlerClassName);
                         try {
                             @SuppressWarnings("unchecked")
                             Class<? extends DataTypeHandler<K1>> clazz = (Class<? extends DataTypeHandler<K1>>) Class.forName(handlerClassName);
-                            DataTypeHandler<K1> h = clazz.newInstance();
+                            DataTypeHandler<K1> h = clazz.getDeclaredConstructor().newInstance();
                             // Create a counter initialized to zero for all handler types.
                             getCounter(context, IngestOutput.ROWS_CREATED.name(), h.getClass().getSimpleName()).increment(0);
                             // Trick here. Set the data.name parameter to type T, then call setup on the DataTypeHandler
@@ -313,7 +355,7 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
                             typeMap.get(typeStr).add(h);
                         } catch (ClassNotFoundException e) {
                             log.error("Error finding DataTypeHandler " + handlerClassName, e);
-                        } catch (InstantiationException | IllegalAccessException e) {
+                        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
                             log.error("Error creating DataTypeHandler " + handlerClassName, e);
                         }
                     }
@@ -321,14 +363,43 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
             }
             log.info("EventMapper configured with the following handlers for " + typeStr + ": " + typeMap.get(typeStr));
         }
-        
+
         return typeMap.get(typeStr);
     }
-    
+
+    private Set<RawRecordPredicate> getPredicates(final String type, final Context context, final Collection<String> basePredicates) {
+        Collection<String> predicateClasses = new HashSet<>(context.getConfiguration().getTrimmedStringCollection(type + "." + RECORD_PREDICATES));
+        predicateClasses.addAll(basePredicates);
+        if (!predicateClasses.isEmpty()) {
+            return predicateClasses.stream().map(s -> {
+                try {
+                    return Class.forName(s);
+                } catch (ClassNotFoundException e) {
+                    throw new IllegalArgumentException("Cannot load predicate for type " + type + ": " + s, e);
+                }
+            }).filter(c -> {
+                if (!RawRecordPredicate.class.isAssignableFrom(c)) {
+                    throw new IllegalArgumentException("Predicate " + c.getName() + " for type " + type + " is not a RawRecordPredicate.");
+                }
+                return true;
+            }).map(c -> {
+                try {
+                    RawRecordPredicate predicate = (RawRecordPredicate) c.getDeclaredConstructor().newInstance();
+                    predicate.setConfiguration(type, context.getConfiguration());
+                    return predicate;
+                } catch (Exception e) {
+                    throw new IllegalArgumentException("Predicate " + c.getName() + " for type " + type + " could not be constructed.", e);
+                }
+            }).collect(Collectors.toSet());
+        } else {
+            return Collections.EMPTY_SET;
+        }
+    }
+
     private List<String> getDataTypeFilterClassNames() {
-        
+
         SortedMap<Integer,String[]> priorityToFilters = new TreeMap<>();
-        
+
         // The Type Registry contains information on the configured types. Pass back a
         // list of the configured filters in the appropriate priority order.
         for (Type t : TypeRegistry.getTypes()) {
@@ -336,45 +407,42 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
                 priorityToFilters.put(t.getFilterPriority(), t.getDefaultDataTypeFilters());
             }
         }
-        
+
         // now expand the filters into one list, priority order
         List<String> filters = new ArrayList<>();
         for (String[] value : priorityToFilters.values()) {
             filters.addAll(Arrays.asList(value));
         }
-        
+
         return filters;
     }
-    
+
     public void map(K1 key, V1 value, Context context) throws IOException, InterruptedException {
-        
+
         TraceStopwatch eventMapperTimer = null;
-        
+
         if (metricsEnabled) {
-            eventMapperTimer = new TraceStopwatch("Time in EventMapper");
+            eventMapperTimer = new TraceStopwatch("Time in EventMapper for " + context.getTaskAttemptID());
             eventMapperTimer.start();
         }
-        
+
         // ensure this datatype's handlers etc are loaded such that the dataTypeDiscardIntervalCache and validators are filled as well
         List<DataTypeHandler<K1>> typeHandlers = loadDataTypeHandlers(value.getDataType().typeName(), context);
-        
+
         // This is a little bit fragile, but there is no other way
         // to get the context on a partitioner, and we are only
         // using this to set some counters that collect stats.
         MultiTableRangePartitioner.setContext(context);
-        
-        Long myInterval = dataTypeDiscardIntervalCache.get(value.getDataType().typeName());
-        
+
         // setup the configuration on the event
         // this is automatically done by the sequence reader....
         // value.setConf(context.getConfiguration());
-        
+
         // Flag to control whether a reprocessed event caused an NDC.push
         boolean reprocessedNDCPush = false;
-        
-        byte[] rawData = value.getRawData();
-        if (rawData != null) {
-            long rawDataBytes = rawData.length;
+
+        long rawDataBytes = value.getDataOutputSize();
+        if (rawDataBytes != -1) {
             getCounter(context, IngestInput.LINE_BYTES.toString(), "TOTAL").increment(rawDataBytes);
             long minBytes = getCounter(context, IngestInput.LINE_BYTES.toString(), "MIN").getValue();
             if (rawDataBytes < minBytes) {
@@ -385,33 +453,32 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
                 getCounter(context, IngestInput.LINE_BYTES.toString(), "MAX").setValue(rawDataBytes);
             }
         }
-        
+
         // First lets clear this event from the error table if we are reprocessing a previously errored event
         if (value.getAuxData() instanceof EventErrorSummary) {
             EventErrorSummary errorSummary = (EventErrorSummary) (value.getAuxData());
             value.setAuxData(null);
-            
+
             // pass the processedCount through via the aux properties
             value.setAuxProperty(ErrorDataTypeHandler.PROCESSED_COUNT, Integer.toString(errorSummary.getProcessedCount() + 1));
-            
+
             // delete these keys from the error table. If this fails then nothing will have changed
             if (log.isInfoEnabled())
                 log.info("Purging event from the " + errorSummary.getTableName() + " table");
-            
+
             try {
                 // Load error dataType into typeMap
                 loadDataTypeHandlers(TypeRegistry.ERROR_PREFIX, context);
-                
                 // purge event
                 errorSummary.purge(contextWriter, context, value, typeMap);
-                
+
                 // Set the original file value from the event in the error table
                 Collection<String> origFiles = errorSummary.getEventFields().get(FieldHarvester.SEQUENCE_FILE_FIELDNAME);
                 if (!origFiles.isEmpty()) {
                     NDC.push(origFiles.iterator().next());
                     reprocessedNDCPush = true;
                 }
-                
+
             } catch (Exception e) {
                 contextWriter.rollback();
                 log.error("Failed to clean event from error table.  Terminating map", e);
@@ -424,25 +491,30 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
             // pass the processedCount through via the aux properties
             value.setAuxProperty(ErrorDataTypeHandler.PROCESSED_COUNT, "1");
         }
-        
-        // Determine whether the event date is greater than the interval. Excluding fatal error events.
-        if (!value.fatalError() && null != myInterval && 0L != myInterval && (value.getDate() < (now.get() - myInterval))) {
-            if (log.isInfoEnabled())
-                log.info("Event with time " + value.getDate() + " older than specified interval of " + (now.get() - myInterval) + ", skipping...");
-            getCounter(context, IngestInput.OLD_EVENT).increment(1);
-            return;
+
+        if (!value.fatalError()) {
+            // Determine whether the event should be filtered for any other reason
+            Set<RawRecordPredicate> predicates = predicateMap.get(value.getDataType().typeName());
+            if (null != predicates && !predicates.isEmpty()) {
+                for (RawRecordPredicate predicate : predicates) {
+                    if (!predicate.test(value)) {
+                        getCounter(context, IngestInput.FILTER.name(), predicate.getCounterName()).increment(1);
+                        return;
+                    }
+                }
+            }
         }
-        
+
         // Add the list of handlers with the ALL specified handlers
         List<DataTypeHandler<K1>> handlers = new ArrayList<>();
         handlers.addAll(typeHandlers);
         handlers.addAll(loadDataTypeHandlers(TypeRegistry.ALL_PREFIX, context));
-        
+
         // Always include any event errors in the counters
         for (String error : value.getErrors()) {
             getCounter(context, IngestInput.EVENT_ERROR_TYPE.name(), error).increment(1);
         }
-        
+
         // switch over to the errorHandlerList if still a fatal error
         if (value.fatalError()) {
             // now clear out the handlers to avoid processing this event
@@ -450,29 +522,28 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
             if (!value.ignorableError()) {
                 // since this is not an ignorable error, lets add the error handlers back into the list
                 handlers.addAll(loadDataTypeHandlers(TypeRegistry.ERROR_PREFIX, context));
-                
                 getCounter(context, IngestInput.EVENT_FATAL_ERROR).increment(1);
                 getCounter(context, IngestInput.EVENT_FATAL_ERROR.name(), "ValidationError").increment(1);
             } else {
                 getCounter(context, IngestInput.EVENT_IGNORABLE_ERROR).increment(1);
                 getCounter(context, IngestInput.EVENT_IGNORABLE_ERROR.name(), "IgnorableError").increment(1);
             }
-            
+
             context.progress();
         }
-        
+
         Multimap<String,NormalizedContentInterface> fields = HashMultimap.create();
         try {
             processEvent(key, value, handlers, fields, context);
         } catch (Exception e) {
             // Rollback anything written for this event
             contextWriter.rollback();
-            
+
             failJobOnConstraintViolations(e);
-            
+
             // ensure they know we are still working on it
             context.progress();
-            
+
             handleProcessingError(key, value, context, fields, e);
         } finally {
             // Remove ORIG_FILE from NDC that was populated by reprocessing events from the error tables
@@ -483,18 +554,18 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
             contextWriter.commit(context);
             context.progress();
         }
-        
+
         incrementEventCount(value, context);
-        
+
         updateMetrics(value, eventMapperTimer, fields);
     }
-    
+
     private void failJobOnConstraintViolations(Exception e) {
         if (e instanceof ConstraintChecker.ConstraintViolationException) {
             throw ((RuntimeException) e);
         }
     }
-    
+
     private void handleProcessingError(K1 key, V1 value, Context context, Multimap<String,NormalizedContentInterface> fields, Exception e) throws IOException {
         log.error("Runtime exception processing event", e);
         // first set the exception on the event if not a field normalization error in which case the fields contain the errors
@@ -504,7 +575,7 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
         writeToErrorTables(key, value, context, fields);
         incrementExceptionCounters(context, e);
     }
-    
+
     private void writeToErrorTables(K1 key, V1 value, Context context, Multimap<String,NormalizedContentInterface> fields) throws IOException {
         // now lets dump to the errors table
         for (DataTypeHandler<K1> handler : loadDataTypeHandlers(TypeRegistry.ERROR_PREFIX, context)) {
@@ -521,7 +592,7 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
             }
         }
     }
-    
+
     private void incrementExceptionCounters(Context context, Exception e) {
         // now create some counters
         getCounter(context, IngestProcess.RUNTIME_EXCEPTION).increment(1);
@@ -530,28 +601,30 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
             getCounter(context, IngestProcess.RUNTIME_EXCEPTION.name(), exception).increment(1);
         }
     }
-    
+
     private void incrementEventCount(V1 value, Context context) {
         getCounter(context, IngestOutput.EVENTS_PROCESSED.name(), value.getDataType().typeName().toUpperCase()).increment(1);
-        
+
         offset++;
     }
-    
+
     private void updateMetrics(V1 value, TraceStopwatch eventMapperTimer, Multimap<String,NormalizedContentInterface> fields) {
         if (metricsEnabled && eventMapperTimer != null) {
             eventMapperTimer.stop();
             long timeInEventMapper = eventMapperTimer.elapsed(TimeUnit.MILLISECONDS);
-            
+
             metricsLabels.clear();
             metricsLabels.put("dataType", value.getDataType().typeName());
             metricsService.collect(Metric.MILLIS_IN_EVENT_MAPPER, metricsLabels.get(), fields, timeInEventMapper);
         }
     }
-    
+
     /**
      * Get an exception synopsis that is suitable as a counter. We want at a minimum the exception name and a useful location. A useful location is defined as
      * the highest location that is in the datawave.ingest package
      *
+     * @param e
+     *            the exception to check
      * @return A synopsis of the exception
      */
     private List<String> getExceptionSynopsis(Throwable e) {
@@ -561,10 +634,10 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
             exceptions.push(e);
             e = e.getCause();
         }
-        
+
         List<String> synopsis = new ArrayList<>();
         StringBuilder buffer = new StringBuilder();
-        
+
         boolean foundTrace = false;
         while (!foundTrace && !exceptions.isEmpty()) {
             e = exceptions.pop();
@@ -585,7 +658,7 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
                 }
             }
         }
-        
+
         // NOTE: By definition, this method is only called by datawave.ingest.EventMapper, and only
         // available to be called by this class the condition on line 542 will always be satisfied
         // and so 'foundTrace' will always be set to true. So, this code can eventually be removed.
@@ -594,13 +667,13 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
             buffer.append(e.getClass().getName());
             synopsis.add(buffer.toString());
         }
-        
+
         return synopsis;
     }
-    
+
     @Override
     public void cleanup(Context context) throws IOException, InterruptedException {
-        
+
         // Write the metadata to the output
         for (List<DataTypeHandler<K1>> handlers : typeMap.values()) {
             for (DataTypeHandler<K1> h : handlers)
@@ -612,21 +685,21 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
                     }
                 }
         }
-        
+
         // dump any unflushed metrics
         if (metricsEnabled) {
             metricsService.close();
         }
-        
+
         // cleanup the context writer
         contextWriter.cleanup(context);
-        
+
         for (List<DataTypeHandler<K1>> handlers : typeMap.values()) {
             for (DataTypeHandler<K1> h : handlers)
                 h.close(context);
         }
         typeMap.clear();
-        
+
         // Add the counters from the standalone reporter to this context.
         Counters counters = reporter.getCounters();
         for (CounterGroup cg : counters) {
@@ -634,15 +707,15 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
                 getCounter(context, cg.getName(), c.getName()).increment(c.getValue());
             }
         }
-        
+
         super.cleanup(context);
-        
+
         // we pushed the filename on the NDC if split is non null, so pop it here.
         if (null != split) {
             NDC.pop();
         }
     }
-    
+
     /**
      * This is where we apply a list of handlers to an event.
      *
@@ -657,18 +730,19 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
      * @param context
      *            The context
      * @throws Exception
+     *             if there is a problem
      */
     public void processEvent(K1 key, RawRecordContainer value, List<DataTypeHandler<K1>> handlers, Multimap<String,NormalizedContentInterface> fields,
                     Context context) throws Exception {
         IngestHelperInterface previousHelper = null;
-        
+
         for (DataTypeHandler<K1> handler : handlers) {
             if (log.isTraceEnabled())
                 log.trace("executing handler: " + handler.getClass().getName());
-            
+
             // gather the fields
             IngestHelperInterface thisHelper = handler.getHelper(value.getDataType());
-            
+
             // This handler has no helper for the event's data type. Therefore, we should
             // just move on to the next handler. This can happen, for example, with the
             // edge handler, depending on the event's data type.
@@ -677,61 +751,61 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
                     log.trace("Aborting processing due to null ingest helper");
                 continue;
             }
-            
+
             // Try to only parse the event once. Parse the event on the first pass and only if
             // the BaseIngestHelper class differs. The same class used by different handlers
             // *should* produce the same result.
             if (null == previousHelper || !previousHelper.getClass().getName().equals(thisHelper.getClass().getName())) {
                 fields.clear();
-                
+
                 // populates fields by parsing value and using IngestHelper
                 fieldHarvester.extractFields(fields, thisHelper, value, offset, splitStart);
-                
+
                 updateMetrics(value, fields);
-                
+
                 previousHelper = thisHelper;
             }
-            
+
             Collection<FieldValidator> fieldValidators = validators.get(value.getDataType().outputName());
             for (FieldValidator validator : fieldValidators) {
                 validator.validate(value, fields);
             }
-            
+
             executeHandler(key, value, fields, handler, context);
-            
+
             context.progress();
         }
     }
-    
+
     private void updateMetrics(RawRecordContainer value, Multimap<String,NormalizedContentInterface> fields) {
         // Event based metrics
         if (metricsEnabled) {
             metricsLabels.clear();
             metricsLabels.put("dataType", value.getDataType().typeName());
-            
+
             metricsService.collect(Metric.EVENT_COUNT, metricsLabels.get(), fields, 1L);
             metricsService.collect(Metric.BYTE_COUNT, metricsLabels.get(), fields, (long) value.getRawData().length);
         }
     }
-    
+
     @SuppressWarnings("unchecked")
     public void executeHandler(K1 key, RawRecordContainer event, Multimap<String,NormalizedContentInterface> fields, DataTypeHandler<K1> handler,
                     Context context) throws Exception {
         long count = 0;
-        
+
         TraceStopwatch handlerTimer = null;
-        
+
         // Handler based metrics
         if (metricsEnabled) {
-            
+
             handlerTimer = new TraceStopwatch("Time in handler");
             handlerTimer.start();
         }
-        
+
         // In the setup we determined whether or not we were performing bulk ingest. This tells us which
         // method to call on the DataTypeHandler interface.
         Multimap<BulkIngestKey,Value> r;
-        
+
         if (!(handler instanceof ExtendedDataTypeHandler)) {
             r = handler.processBulk(key, event, fields, new ContextWrappedStatusReporter(getContext(context)));
             if (r == null) {
@@ -748,38 +822,38 @@ public class EventMapper<K1,V1 extends RawRecordContainer,K2,V2> extends StatsDE
                 getCounter(context, IngestInput.EVENT_FATAL_ERROR.name(), "NegOneCount").increment(1);
             }
         }
-        
+
         // Update the counters
         if (count > 0) {
             getCounter(context, IngestOutput.ROWS_CREATED.name(), handler.getClass().getSimpleName()).increment(count);
             getCounter(context, IngestOutput.ROWS_CREATED).increment(count);
         }
-        
+
         if (handler.getMetadata() != null) {
             handler.getMetadata().addEvent(handler.getHelper(event.getDataType()), event, fields, now.get());
         }
-        
+
         if (metricsEnabled && handlerTimer != null) {
             handlerTimer.stop();
             long handlerTime = handlerTimer.elapsed(TimeUnit.MILLISECONDS);
-            
+
             metricsLabels.clear();
             metricsLabels.put("dataType", event.getDataType().typeName());
             metricsLabels.put("handler", handler.getClass().getName());
             metricsService.collect(Metric.MILLIS_IN_HANDLER, metricsLabels.get(), fields, handlerTime);
-            
+
             if (contextWriter instanceof KeyValueCountingContextWriter) {
                 ((KeyValueCountingContextWriter) contextWriter).writeMetrics(event, fields, handler);
             }
         }
     }
-    
+
     public ContextWriter<K2,V2> getContextWriter() {
         return this.contextWriter;
     }
-    
+
     public Map<String,List<DataTypeHandler<K1>>> getHandlerMap() {
         return this.typeMap;
     }
-    
+
 }
